spacing fixes

--- a/src/CheckboxField/styles.pcss
+++ b/src/CheckboxField/styles.pcss
@@ -2,6 +2,7 @@
 
 .input-wrapper {
   display: inline-block;
+  padding-bottom: calc(var(--spacingUnit) / 4);
 }
 
 .display-inline {
