--- a/src/Fieldset/styles.pcss
+++ b/src/Fieldset/styles.pcss
@@ -7,7 +7,7 @@ fieldset {
 
 .fieldset {
   box-sizing: border-box;
-  margin-bottom: var(--spacingUnit);
+  margin-bottom: calc(var(--spacingUnit) * 1.5);
   border: var(--fieldsetBorder);
   border-radius: var(--borderRadius);
   background-color: var(--fieldsetBgColor);
